# NyayaLens

./: .editorconfig  .firebaserc  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  firebase.json
.github/workflows/: backend-ci.yml  contract-test.yml  frontend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/nyayalens/: __init__.py  config.py  main.py
backend/nyayalens/adapters/: __init__.py  firebase_auth.py  firestore.py  gemini.py  inmemory.py  mock_llm.py  reportlab_pdf.py
backend/nyayalens/api/: __init__.py  deps.py  routes.py  state.py
backend/nyayalens/core/: __init__.py
backend/nyayalens/core/_contracts/: __init__.py  audit.py  llm.py  pii.py  storage.py
backend/nyayalens/core/bias/: __init__.py  conflicts.py  heatmap.py  metrics.py  proxies.py  registry.py
backend/nyayalens/core/domains/: __init__.py
backend/nyayalens/core/domains/hiring/: __init__.py  prompts.py  registry.py  templates.py
backend/nyayalens/core/explain/: __init__.py  prompts.py  validator.py
backend/nyayalens/core/govern/: __init__.py  audit.py  rbac.py
backend/nyayalens/core/llm_probe/: __init__.py  job_description.py  resume_screening.py
backend/nyayalens/core/mitigate/: __init__.py  reweighting.py
backend/nyayalens/core/recourse/: __init__.py  summary.py
backend/nyayalens/core/report/: __init__.py  composer.py
backend/nyayalens/core/schema/: __init__.py  detector.py  parser.py  pii.py
backend/nyayalens/models/: __init__.py
backend/nyayalens/models/api/: __init__.py  audit.py  bias.py  dataset.py  evidence.py  govern.py  probe.py  recourse.py  remediate.py  report.py  wire.py
backend/nyayalens/models/firestore/: __init__.py  audit.py  audit_trail.py  organization.py  recourse.py  user.py
backend/scripts/: export_schemas.py  generate_synthetic_data.py
backend/tests/: conftest.py
backend/tests/contract/: test_import_graph.py
backend/tests/fixtures/: metric_oracles.json
backend/tests/integration/: test_audit_lifecycle.py
backend/tests/unit/: test_app_state.py  test_auth.py  test_cors.py  test_data_quality.py  test_extract_score.py  test_firestore_adapter.py  test_firestore_models_timestamps.py  test_grounding.py  test_heatmap_attribute.py  test_metrics.py  test_mode_guard.py  test_perturbation_probe.py  test_pii_recognizer.py  test_recourse_summary.py  test_recourse_workflow.py  test_report_composer.py  test_reweighting.py  test_schema_detector_fallback.py  test_tradeoff_endpoint.py
docs/: CONTRIBUTING.md  demo-script.md  runbook.md  system-design.md
docs/adr/: 0001-modular-monolith.md  0002-custom-metrics-engine.md  0003-presidio-pattern-only-mvp.md  0004-audit-trail-firestore-then-cloud-logging.md  0005-privacy-typed-payload-envelope.md
frontend/: README.md  analysis_options.yaml  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/app/: router.dart  theme.dart
frontend/lib/features/audits/: audit_pages.dart  audit_session.dart
frontend/lib/features/dashboard/: dashboard_page.dart
frontend/lib/features/demo/: demo_flow.dart
frontend/lib/features/recourse/: recourse_review_page.dart
frontend/lib/features/settings/: settings_page.dart
frontend/lib/shared/api/: api_client.dart
frontend/test/: data_quality_chip_test.dart  frontend_redesign_test.dart  mode_guard_test.dart  recourse_test.dart  tradeoff_test.dart  widget_test.dart
frontend/test/contract/: api_schema_test.dart
frontend/web/: index.html  manifest.json
infra/: .firebaserc  firebase.json  firestore.indexes.json  storage.rules
infra/cloud-run/: cloudbuild.yaml  service.yaml
scripts/: deploy-all.ps1  deploy-backend.ps1  deploy-frontend.ps1  logs-backend.ps1  smoke.ps1
shared/: firestore.rules
shared/sample_data/: placement_synthetic.csv
(+9 files in other folders)
