[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyayalens"
version = "0.1.0"
description = "NyayaLens — AI accountability operating system for hiring fairness"
authors = [{name = "Team Zenith"}]
license = "Apache-2.0"
license-files = ["../LICENSE"]
readme = "../README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # Web framework
  "fastapi>=0.115,<0.200",
  "uvicorn[standard]>=0.32,<0.40",
  "python-multipart>=0.0.20",     # multipart file uploads

  # Models & validation
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",

  # Numerical computing (bias metrics engine — ADR 0002)
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.5,<2",          # NearestNeighbors for consistency metric only

  # File I/O
  "openpyxl>=3.1,<4",              # XLSX reading

  # Google AI + Firebase
  "google-generativeai>=0.8,<1",
  "firebase-admin>=6.5,<7",
  "google-cloud-storage>=2.18,<3",

  # Privacy / PII detection (ADR 0003 — pattern-only, no spaCy)
  "presidio-analyzer>=2.2,<3",

  # PDF report generation
  "reportlab>=4.2,<5",

  # Resilience
  "tenacity>=9.0,<10",             # retry w/ backoff for Gemini calls
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=6.0,<7",
  "httpx>=0.27,<1",                # FastAPI TestClient uses httpx
  "ruff>=0.8,<1",
  "mypy>=1.13,<2",
  "types-requests",
  "hypothesis>=6.118,<7",          # property-based tests for grounding validator
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nyayalens*"]
exclude = ["tests*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # bugbear
  "S",   # security (bandit)
  "C4",  # comprehensions
  "RET", # returns
  "SIM", # simplify
  "RUF", # ruff-specific
]
ignore = [
  "S101",  # assert is fine in tests
  "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"scripts/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "presidio_analyzer.*",
  "firebase_admin.*",
  "google.cloud.*",
  "google.generativeai.*",
  "reportlab.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=nyayalens",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests that require Firebase emulators",
]

[tool.coverage.run]
branch = true
source = ["nyayalens"]
omit = ["*/tests/*", "*/scripts/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
